-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.8.0
-
3
-
9223372036854775807
Found that lfs getstripe on lustre bind mount fails to return the attributes.
Here are the steps to reproduce the problem.
/mnt/lustre is lustre mount point
- mkdir /mnt/lustre/dir
- mount --bind /mnt/lustre /home/bind/
- ls /home/bind/
dir
- lfs getstripe /home/bind//dir/
/home/bind//dir/
can't find fs root for '/home/bind/dir': -19
Cannot determine default stripe count.: No such device (19)
can't find fs root for '/home/bind/dir': -19
Cannot determine default stripe size.: No such device (19)
stripe_count: stripe_size: stripe_offset: -1