lustre/utils/liblustreapi.c
@@ -855,11 +855,11 @@ int get_root_path(int want, char *fsname, int *outfd, char *path, int index)
         int rc = -ENODEV;
 
         /* get the mount point */
-        fp = setmntent(MOUNTED, "r");
+        fp = setmntent(PROC_MOUNTS, "r");
         if (fp == NULL) {
                 rc = -EIO;
                 llapi_error(LLAPI_MSG_ERROR, rc,
-                            "setmntent(%s) failed", MOUNTED);
+                            "setmntent(%s) failed", PROC_MOUNTS);
                 return rc;
         }
         while (1) {
